@startuml

title __ADDRESS's Class Diagram__\n

  namespace com.pis.buy2gether {
    namespace usecases.home {
      namespace user {
        namespace address {
          class com.pis.buy2gether.usecases.home.user.address.AddressFragment {
              ~ btn_add : Button
              ~ btn_cancel : ImageButton
              ~ btn_return : ImageButton
              ~ btn_save : ImageButton
              ~ popup_address : EditText
              ~ popup_name : EditText
              ~ popup_num : TextView
              ~ popup_phone : EditText
              ~ popup_postalcode : EditText
              - list : ArrayList<Item>
              - recyclerView : RecyclerView
              + onClick()
              + onCreateView()
              + onDeleteClick()
              + onDestroyView()
              + onEditClick()
              - addAddress()
              - deleteWarning()
              - editAddress()
              - saveAddress()
              - setAdapter()
              - setList()
              - setupAddressPopup()
              - setupEditAddressPopup()
          }
        }
      }
    }
  }
  

  namespace com.pis.buy2gether {
    namespace usecases.home {
      namespace user {
        namespace address {
          class com.pis.buy2gether.usecases.home.user.address.AddressListAdapter {
              - mData : List<Map>
              - mInflater : LayoutInflater
              + getItemCount()
              + onBindViewHolder()
              + onCreateViewHolder()
              + swipe()
              ~ AddressListAdapter()
              ~ setClickListener()
          }
        }
      }
    }
  }
  

  namespace com.pis.buy2gether {
    namespace usecases.home {
      namespace user {
        namespace address {
          interface com.pis.buy2gether.usecases.home.user.address.AddressListAdapter.ItemClickListener {
              {abstract} + onClick()
              {abstract} + onDeleteClick()
              {abstract} + onEditClick()
          }
        }
      }
    }
  }
  

  namespace com.pis.buy2gether {
    namespace usecases.home {
      namespace user {
        namespace address {
          class com.pis.buy2gether.usecases.home.user.address.AddressListAdapter.ViewHolder {
              ~ address : TextView
              ~ btn_delete : ImageButton
              ~ btn_edit : ImageButton
              ~ name_address : TextView
              ~ num_address : TextView
              ~ postal_code : TextView
              ~ tel : TextView
              + onClick()
              ~ ViewHolder()
          }
        }
      }
    }
  }
  

  namespace com.pis.buy2gether {
    namespace usecases.home {
      namespace user {
        namespace address {
          class com.pis.buy2gether.usecases.home.user.address.AddressViewModel {
              + addressInfo()
              + getAddresses()
              ~ deleteAddressDB()
              ~ saveAddressDB()
              - getUser()
          }
        }
      }
    }
  }
  

  com.pis.buy2gether.usecases.home.user.address.AddressFragment .up.|> com.pis.buy2gether.usecases.home.user.address.AddressListAdapter.ItemClickListener
  com.pis.buy2gether.usecases.home.user.address.AddressFragment -up-|> androidx.fragment.app.Fragment
  com.pis.buy2gether.usecases.home.user.address.AddressFragment o-- com.pis.buy2gether.usecases.home.user.address.AddressListAdapter : addressListAdapter
  com.pis.buy2gether.usecases.home.user.address.AddressFragment o-- com.pis.buy2gether.usecases.home.user.address.AddressViewModel : addressViewModel
  com.pis.buy2gether.usecases.home.user.address.AddressFragment o-- com.pis.buy2gether.databinding.FragmentAddressBinding : binding
  com.pis.buy2gether.usecases.home.user.address.AddressListAdapter -up-|> androidx.recyclerview.widget.RecyclerView.Adapter
  com.pis.buy2gether.usecases.home.user.address.AddressListAdapter o-- com.pis.buy2gether.usecases.home.user.address.AddressListAdapter.ItemClickListener : mClickListener
  com.pis.buy2gether.usecases.home.user.address.AddressListAdapter +-down- com.pis.buy2gether.usecases.home.user.address.AddressListAdapter.ItemClickListener
  com.pis.buy2gether.usecases.home.user.address.AddressListAdapter +-down- com.pis.buy2gether.usecases.home.user.address.AddressListAdapter.ViewHolder
  com.pis.buy2gether.usecases.home.user.address.AddressListAdapter.ViewHolder .up.|> android.view.View.OnClickListener
  com.pis.buy2gether.usecases.home.user.address.AddressListAdapter.ViewHolder -up-|> androidx.recyclerview.widget.RecyclerView.ViewHolder
  com.pis.buy2gether.usecases.home.user.address.AddressViewModel -up-|> androidx.lifecycle.ViewModel


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
